--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -105,13 +105,11 @@
 
 .shine {
   background: #f6f7f8;
-  background-image: linear-gradient(
-    to right,
-    #f6f7f8 0%,
-    #edeef1 20%,
-    #f6f7f8 40%,
-    #f6f7f8 100%
-  );
+  background-image: linear-gradient(to right,
+      #f6f7f8 0%,
+      #edeef1 20%,
+      #f6f7f8 40%,
+      #f6f7f8 100%);
   background-repeat: no-repeat;
   background-size: 800px 104px;
   display: inline-block;
@@ -130,6 +128,45 @@
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-name: placeholderShimmer;
   -webkit-animation-timing-function: linear;
+}
+
+@media (max-width: 1120px) {
+  .leftDrawer {
+    width: calc(250px + 2rem);
+    padding: 1rem 1rem 0 1rem;
+  }
+}
+
+/* For tablets */
+@media (max-width: 820px) {
+  .leftDrawer {
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+
+  .leftDrawer .closeModalBtn {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 10;
+  }
+
+  /* For smaller devices .activeDrawer in real behaves like inactive */
+  .activeDrawer {
+    opacity: 0;
+    left: 0;
+    z-index: -1;
+    animation: closeDrawer 0.4s ease-in-out;
+  }
+
+  /* For smaller devices .inactiveDrawer in real behaves like active */
+  .inactiveDrawer {
+    display: flex;
+    z-index: 100;
+    animation: openDrawer 0.6s ease-in-out;
+  }
 }
 
 @keyframes placeholderShimmer {
@@ -153,39 +190,6 @@
   }
 }
 
-@media (max-width: 1120px) {
-  .leftDrawer {
-    width: calc(250px + 2rem);
-    padding: 1rem 1rem 0 1rem;
-  }
-}
-
-/* For tablets */
-@media (max-width: 820px) {
-  .leftDrawer {
-    width: 100%;
-    left: 0;
-    right: 0;
-  }
-  .leftDrawer .closeModalBtn {
-    display: block;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    z-index: 10;
-  }
-  .activeDrawer {
-    opacity: 0;
-    left: 0;
-    animation: closeDrawer 0.6s ease-in-out;
-  }
-
-  .inactiveDrawer {
-    display: flex;
-    animation: openDrawer 0.8s ease-in-out;
-  }
-}
-
 @keyframes goToLeftBigScreen {
   from {
     left: 0;
@@ -197,7 +201,34 @@
   }
 }
 
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes goToLeftBigScreen {
+  from {
+    left: 0;
+  }
+
+  to {
+    opacity: 0.1;
+    left: calc(-300px - 2rem);
+  }
+}
+
 @keyframes comeToRightBigScreen {
+  from {
+    opacity: 0.4;
+    left: calc(-300px - 2rem);
+  }
+
+  to {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes comeToRightBigScreen {
   from {
     opacity: 0.4;
     left: calc(-300px - 2rem);
@@ -221,7 +252,35 @@
   }
 }
 
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes closeDrawer {
+  from {
+    left: 0;
+    opacity: 1;
+  }
+
+  to {
+    left: -1000px;
+    opacity: 0;
+  }
+}
+
 @keyframes openDrawer {
+  from {
+    opacity: 0;
+    left: -1000px;
+  }
+
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes openDrawer {
   from {
     opacity: 0;
     left: -1000px;
