--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -121,12 +121,15 @@
     display: block;
     margin-top: 1rem;
   }
+
   .pageContainer .btnsContainer .btnsBlock button:nth-child(1) {
     margin-right: 0.5rem;
   }
+
   .pageContainer .btnsContainer .btnsBlock button:nth-child(2) {
     margin-right: 0;
   }
+
   .pageContainer .btnsContainer .btnsBlock button {
     margin-bottom: 1rem;
     width: 100%;
@@ -150,5 +153,94 @@
 
   to {
     padding-left: calc(300px + 2rem + 1.5rem);
+  }
+}
+
+
+/* Loading OrgList CSS */
+.itemCard .loadingWrapper {
+  background-color: var(--bs-white);
+  margin: 0.5rem;
+  height: calc(120px + 2rem);
+  padding: 1rem;
+  border-radius: 8px;
+  outline: 1px solid var(--bs-gray-200);
+  position: relative;
+}
+
+.itemCard .loadingWrapper .innerContainer {
+  display: flex;
+}
+
+.itemCard .loadingWrapper .innerContainer .orgImgContainer {
+  width: 120px;
+  height: 120px;
+  border-radius: 4px;
+}
+
+.itemCard .loadingWrapper .innerContainer .content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+.itemCard .loadingWrapper .innerContainer .content h5 {
+  height: 24px;
+  width: 60%;
+  margin-bottom: 0.8rem;
+}
+
+.itemCard .loadingWrapper .innerContainer .content h6[title="Location"] {
+  display: block;
+  width: 45%;
+  height: 18px;
+}
+
+.itemCard .loadingWrapper .innerContainer .content h6 {
+  display: block;
+  width: 30%;
+  height: 16px;
+  margin-bottom: 0.8rem;
+}
+
+.itemCard .loadingWrapper .button {
+  position: absolute;
+  height: 48px;
+  width: 92px;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1;
+}
+
+@media (max-width: 450px) {
+  .itemCard .loadingWrapper {
+    height: unset;
+    margin: 0.5rem 0;
+    padding: 1.25rem 1.5rem;
+  }
+
+  .itemCard .loadingWrapper .innerContainer {
+    flex-direction: column;
+  }
+
+  .itemCard .loadingWrapper .innerContainer .orgImgContainer {
+    height: 200px;
+    width: 100%;
+    margin-bottom: 0.8rem;
+  }
+
+  .itemCard .loadingWrapper .innerContainer .content {
+    margin-left: 0;
+  }
+
+
+  .itemCard .loadingWrapper .button {
+    bottom: 0;
+    right: 0;
+    border-radius: 0.5rem;
+    position: relative;
+    margin-left: auto;
+    display: block;
   }
 }
