--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -112,6 +112,10 @@
 
 /* For tablets */
 @media (max-width: 820px) {
+  .hideElemByDefault {
+    display: none;
+  }
+
   .leftDrawer {
     width: 100%;
     left: 0;
